tests/baselines/reference/emitArrowFunctionWhenUsingArguments06(alwaysstrict=false,target=es5).errors.txt
emitArrowFunctionWhenUsingArguments06.ts(2,25): error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.


==== emitArrowFunctionWhenUsingArguments06.ts (1 errors) ====
    function f(arguments) {
        var a = () => () => arguments;
                            ~~~~~~~~~
!!! error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.
    }